Tue Apr  4 14:49:09 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* A really hacked network multimatch gets the same results as
	  the multidb1 test in apitest.  Much cleanup needed.

Mon Apr  3 17:55:04 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed open() method from IRDatabase().  Use constructor to open
	  database instead: this is _much_ cleaner.

Fri Mar 31 19:00:50 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* First remote mset retrieved.  Still doesn't complete the whole
	  match process, but getting there.

Wed Mar 29 18:01:46 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Split sleepycat database stuff into separate files, and made it
	  compile on a debian system.  (Needs autoconf detection of sleepycat
	  db.)

Tue Mar 28 18:43:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Lots of documentation comments in database.h

	* Changed signature of IRDatabase::open_post_list() so that it
	  doesn't take an rset:  was never used (weight is told directly
	  instead.)

Tue Mar 28 14:07:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix for a bug with setting query from vector.

	* Added test case for the bug.

Tue Mar 28 11:17:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Now builds query tree when prepare_match() is called, so correct
	  stats get shared again.

Mon Mar 27 18:36:06 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Renamed SingleMatch::match() to SingleMatch::get_mset()

	* Added SingleMatch::prepare_match() to be called before get_mset()
	  or get_max_weight(), which flushes the statistics with the
	  StatsGatherer.

Fri Mar 24 17:56:41 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a NetClient interface for remote matchers

	* Implemented ProgClient as a convenient test implementation

	* Added an OmNetworkError exception class

	* Documentation doesn't get built by default
